@@ -64,12 +64,9 @@ public class DialogPrintTourTests {
 
       //Kill Acrobat Reader otherwise it could make the subsequent tests fail
       try {
-         //Runtime.getRuntime().exec("taskkill /F /IM AcroRd32.exe"); //$NON-NLS-1$
-         final ProcessBuilder pb = new ProcessBuilder("taskkill /F /IM AcroRd32.exe");
-         final Process p = pb.start();
-         final long pid = p.pid();
-         assertEquals(pid, 12);
+         Runtime.getRuntime().exec("taskkill /F /IM Acrobat.exe"); //$NON-NLS-1$
       } catch (final IOException ex) {
+         //ignored
          assertEquals("toto", ex.getMessage());
       }
 
